--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.4",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.16.2",
     "@tailwindcss/forms": "^0.5.7",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,7 +30,7 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.16.1",
+    "prisma": "^5.16.2",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
