--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 NODE_ENV=development
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+AUTH_SECRET=secret
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
