--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.2",
+    "@auth/prisma-adapter": "^2.4.1",
+    "@prisma/client": "^5.17.0",
     "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.1.1",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
@@ -30,7 +32,7 @@
     "postcss": "^8",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.16.2",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
