--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 NODE_ENV=development
+NEXT_PUBLIC_API_URL="http://localhost:3000"
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 AUTH_SECRET=secret
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
+STRIPE_TEST_SECRET_KEY=
+NEXT_PUBLIC_TEST_STRIPE_PUBLISHABLE_KEY=
