--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
     "@prisma/client": "^5.17.0",
+    "@stripe/stripe-js": "^4.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "stripe": "^16.2.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
