--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,17 @@
 NODE_ENV=development
 NEXT_PUBLIC_API_URL="http://localhost:3000"
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 AUTH_SECRET=secret
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 STRIPE_TEST_SECRET_KEY=
 NEXT_PUBLIC_TEST_STRIPE_PUBLISHABLE_KEY=
 FAL_KEY=
+
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
