Add comments for local and test db

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NODE_ENV=development
 NEXT_PUBLIC_API_URL="http://localhost:3000"
+DATABASE_URL=
+TEST_DATABASE_URL=
 AUTH_SECRET=secret
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
@@ -7,6 +9,7 @@ STRIPE_TEST_SECRET_KEY=
 NEXT_PUBLIC_TEST_STRIPE_PUBLISHABLE_KEY=
 FAL_KEY=
 
+# For production Vercel Postgres Database
 POSTGRES_URL=
 POSTGRES_PRISMA_URL=
 POSTGRES_URL_NO_SSL=
