--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,12 @@
       "@/*": ["./src/*"]
     }
   },
-
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "jest.config.js"
+    "jest.config.ts"
   ],
   "exclude": ["node_modules"],
   "ts-node": {
