Write more tests and e2e test for auth
In this commit I tested Filters component. Add Credentials auth provider in development environment for easier testing. Use provided Auth.js sign in page instead of our custom. Seed test user in local database. E2E test adding clothing items to the wishlist and purchasing items.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "name": "next"
       }
     ],
-    "types": ["@testing-library/jest-dom"],
+    "types": ["@testing-library/jest-dom", "node"],
     "paths": {
       "@/*": ["./src/*"]
     }
@@ -29,10 +29,5 @@
     ".next/types/**/*.ts",
     "jest.config.ts"
   ],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+  "exclude": ["node_modules"]
 }
